
        **************************************************
        *                                                *
        *              0.8 SERIES NEWS                   *
        *                                                *
        **************************************************


                CHANGES IN R VERSION 0.8.8


NEW FEATURES

    o   Added 'vander' method.

    o   Added 'pow2' method.

    o   Added 'nextpow2' method.


BUG FIXES

    o   Additional argument checking for 'isprime' method.


                CHANGES IN R VERSION 0.8.7


NEW FEATURES

    o   Added 'factors' method.

    o   Added 'hilb' method.

    o   Added 'isprime' method.

    o   Added 'primes' method.

    o   Added 'rosser' method.


                CHANGES IN R VERSION 0.8.6


BUG FIXES

    o   Converted NEWS file into something R can recognize.


                CHANGES IN R VERSION 0.8.5


BUG FIXES

    o   Fixed 'mod' to correct for 'mod(n,0) == n' [HWB-20110308]


                CHANGES IN R VERSION 0.8.4


BUG FIXES

    o   Fixed 'linspace' to correct for undocumented 'floor(n)' [HWB-20110205]

    o   Fixed 'logspace' to correct for 'n < 2' condition. [HWB-20110205]


NEW FEATURES

    o   Reimplemented 'logspace' as '10 ^ logspace(a,b,n)' to consolidate.


                CHANGES IN R VERSION 0.8.3


BUG FIXES

    o   Respecify license by request of CRAN maintainer.


                CHANGES IN R VERSION 0.8.2


BUG FIXES

    o   Removed 'grdev' method from 'colorbar' test codes for R-2.8 compatibility.


                CHANGES IN R VERSION 0.8.1


BUG FIXES

    o   Modified 'sum' to handle logicals.


                CHANGES IN R VERSION 0.8.0


NEW FEATURES

    o   Added 'cell' method.

    o   Added 'isempty' method.

    o   Added 'magic' method.

    o   Added 'meshgrid' method.

    o   Added 'ndims' method.

    o   Added 'numel' method.

    o   Added 'padarray' method.

    o   Added 'reshape' method.

    o   Added 'strcmp' method.
