@@ -1,6 +1,6 @@
 Package: matlab
-Version: 0.8.8
-Date: 2011-09-08
+Version: 0.8.9
+Date: 2011-09-29
 Title: MATLAB emulation package
 Author: P. Roebuck
 Maintainer: P. Roebuck <proebuck@mdanderson.org>
@@ -9,6 +9,6 @@ Depends: R (>= 2.7), methods
 LazyLoad: true
 License: Artistic-2.0
 URL: http://odin.mdacc.tmc.edu/~plroebuck/R/index.html#matlab
-Packaged: 2011-09-13 20:19:37 UTC; paulr
+Packaged: 2011-09-29 19:48:31 UTC; paulr
 Repository: CRAN
-Date/Publication: 2011-09-14 06:21:07
+Date/Publication: 2011-09-30 05:51:56
